--- a/.editorconfig
+++ b/.editorconfig
@@ -2,3 +2,6 @@
 
 # CA1307: Specify StringComparison
 dotnet_diagnostic.CA1307.severity = silent
+
+# CA1305: Specify IFormatProvider
+dotnet_diagnostic.CA1305.severity = silent
