--- a/BinaryStarLib.OS/BinaryStarLib.OS.csproj
+++ b/BinaryStarLib.OS/BinaryStarLib.OS.csproj
@@ -6,6 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNext" Version="2.2.0" />
+    <PackageReference Include="DotNext.Reflection" Version="2.2.0" />
+    <PackageReference Include="DotNext.Threading" Version="2.2.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0-beta3.final">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
