--- a/BinaryStarLib/BinaryStarLib.csproj
+++ b/BinaryStarLib/BinaryStarLib.csproj
@@ -10,6 +10,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNext" Version="2.2.0" />
+    <PackageReference Include="DotNext.Reflection" Version="2.2.0" />
+    <PackageReference Include="DotNext.Threading" Version="2.2.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0-beta3.final">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
