Change default namespace

--- a/BinaryStarLib.OS/BinaryStarLib.OS.csproj
+++ b/BinaryStarLib.OS/BinaryStarLib.OS.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp5.0</TargetFramework>
     <Platforms>AnyCPU;x64</Platforms>
+    <RootNamespace>BSL.OS</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
