--- a/BinaryStarLib.FileSystem/BinaryStarLib.FileSystem.csproj
+++ b/BinaryStarLib.FileSystem/BinaryStarLib.FileSystem.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="SharpZipLib" Version="1.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BinaryStarLib\BinaryStarLib.csproj" />
+  </ItemGroup>
+
 </Project>
