--- a/.editorconfig
+++ b/.editorconfig
@@ -5,3 +5,6 @@ dotnet_diagnostic.CA1305.severity = silent
 
 # CA1307: Specify StringComparison
 dotnet_diagnostic.CA1307.severity = silent
+
+# CA1062: Validate arguments of public methods
+dotnet_diagnostic.CA1062.severity = silent
