--- a/FileSystemTests/FileSystemTests.csproj
+++ b/FileSystemTests/FileSystemTests.csproj
@@ -12,4 +12,10 @@
     <ProjectReference Include="..\BinaryStarLib\BinaryStarLib.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="TestingReadFile.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
