--- a/BinaryStarLib.FileSystem/BinaryStarLib.FileSystem.csproj
+++ b/BinaryStarLib.FileSystem/BinaryStarLib.FileSystem.csproj
@@ -1,25 +1,21 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp5.0</TargetFramework>
-    <Platforms>AnyCPU;x64</Platforms>
-    <RootNamespace>BSL.FileSystem</RootNamespace>
+	<TargetFramework>netstandard2.1</TargetFramework>
+	<Platforms>x64</Platforms>
+	<RootNamespace>BSL.FileSystem</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNext" Version="2.3.0" />
-    <PackageReference Include="DotNext.Reflection" Version="2.3.0" />
-    <PackageReference Include="DotNext.Threading" Version="2.3.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="SharpZipLib" Version="1.2.0" />
+	<PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0">
+	  <PrivateAssets>all</PrivateAssets>
+	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	</PackageReference>
+	<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BinaryStarLib\BinaryStarLib.csproj" />
+	<ProjectReference Include="..\BinaryStarLib\BinaryStarLib.csproj" />
   </ItemGroup>
 
 </Project>
