--- a/BinaryStarLib.Media/BinaryStarLib.Media.csproj
+++ b/BinaryStarLib.Media/BinaryStarLib.Media.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp5.0</TargetFramework>
-    <Platforms>AnyCPU;x64</Platforms>
+    <TargetFramework>netstandard2.1</TargetFramework>
+    <Platforms>x64</Platforms>
     <RootNamespace>BSL.Media</RootNamespace>
   </PropertyGroup>
 
