--- a/BinaryStarLib/BinaryStarLib.csproj
+++ b/BinaryStarLib/BinaryStarLib.csproj
@@ -1,26 +1,22 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp5.0</TargetFramework>
-    <Platforms>x64</Platforms>
-    <AssemblyName>BinaryStarLib</AssemblyName>
-    <RootNamespace>BSL</RootNamespace>
+	<TargetFramework>netstandard2.1</TargetFramework>
+	<Platforms>x64</Platforms>
+	<AssemblyName>BinaryStarLib</AssemblyName>
+	<RootNamespace>BSL</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\.editorconfig" Link=".editorconfig" />
+	<None Include="..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNext" Version="2.3.0" />
-    <PackageReference Include="DotNext.Reflection" Version="2.3.0" />
-    <PackageReference Include="DotNext.Threading" Version="2.3.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="SharpZipLib" Version="1.2.0" />
+	<PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0">
+	  <PrivateAssets>all</PrivateAssets>
+	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	</PackageReference>
+	<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
 </Project>
