--- a/BinaryStarLib.Math/BinaryStarLib.Math.csproj
+++ b/BinaryStarLib.Math/BinaryStarLib.Math.csproj
@@ -1,18 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-	<TargetFramework>netstandard2.1</TargetFramework>
+	<PropertyGroup>
+	<TargetFramework>net5.0</TargetFramework>
 	<Platforms>x64</Platforms>
 	<RootNamespace>BSL.Math</RootNamespace>
-  </PropertyGroup>
+	</PropertyGroup>
 
-  <ItemGroup>
+	<ItemGroup>
 	<PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0">
-	  <PrivateAssets>all</PrivateAssets>
-	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		<PrivateAssets>all</PrivateAssets>
+		<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	</PackageReference>
 	<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
 	<PackageReference Include="SharpZipLib" Version="1.2.0" />
-  </ItemGroup>
+	</ItemGroup>
 
 </Project>
