--- a/BinaryStarLib.FileSystem/BinaryStarLib.FileSystem.csproj
+++ b/BinaryStarLib.FileSystem/BinaryStarLib.FileSystem.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.1</TargetFramework>
+		<TargetFramework>net5.0</TargetFramework>
 	<Platforms>x64</Platforms>
 	<RootNamespace>BSL.FileSystem</RootNamespace>
 	</PropertyGroup>
@@ -12,10 +12,6 @@
 		<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	</PackageReference>
 	<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-	</ItemGroup>
-
-	<ItemGroup>
-	<ProjectReference Include="..\BinaryStarLib\BinaryStarLib.csproj" />
 	</ItemGroup>
 
 </Project>
