--- a/BinaryStarLib/BinaryStarLib.csproj
+++ b/BinaryStarLib/BinaryStarLib.csproj
@@ -19,4 +19,9 @@
 	<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\BinaryStarLib.Extensions\BinaryStarLib.Extensions.csproj" />
+	  <ProjectReference Include="..\BinaryStarLib.OS\BinaryStarLib.OS.csproj" />
+	</ItemGroup>
+
 </Project>
