--- a/BinaryStarLib.Extensions/BinaryStarLib.Extensions.csproj
+++ b/BinaryStarLib.Extensions/BinaryStarLib.Extensions.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>BSL.Extensions</RootNamespace>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
 </Project>
