--- a/BinaryStarLib.FileSystem/BinaryStarLib.FileSystem.csproj
+++ b/BinaryStarLib.FileSystem/BinaryStarLib.FileSystem.csproj
@@ -14,4 +14,8 @@
 	<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\BinaryStarLib.Extensions\BinaryStarLib.Extensions.csproj" />
+	</ItemGroup>
+
 </Project>
