--- a/BinaryStarLib.FileSystem/BinaryStarLib.FileSystem.csproj
+++ b/BinaryStarLib.FileSystem/BinaryStarLib.FileSystem.csproj
@@ -7,6 +7,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <ProjectReference Include="..\BinaryStarLib.Extensions\BinaryStarLib.Extensions.csproj" />
 	</ItemGroup>
 
