--- a/BinaryStarLib/BinaryStarLib.csproj
+++ b/BinaryStarLib/BinaryStarLib.csproj
@@ -12,6 +12,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <ProjectReference Include="..\BinaryStarLib.Extensions\BinaryStarLib.Extensions.csproj" />
 	  <ProjectReference Include="..\BinaryStarLib.OS\BinaryStarLib.OS.csproj" />
 	</ItemGroup>
