--- a/Stryxus.Lib/Stryxus.Lib.csproj
+++ b/Stryxus.Lib/Stryxus.Lib.csproj
@@ -5,37 +5,38 @@
 	<Platforms>x64;AnyCPU</Platforms>
 	<AssemblyName>Stryxus.Lib</AssemblyName>
 	<RootNamespace>Stryxus.Lib</RootNamespace>
+		<LangVersion>9.0</LangVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-	  <DebugType>none</DebugType>
-	  <DebugSymbols>false</DebugSymbols>
+		<DebugType>none</DebugType>
+		<DebugSymbols>false</DebugSymbols>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-	  <DebugType>none</DebugType>
-	  <DebugSymbols>false</DebugSymbols>
+		<DebugType>none</DebugType>
+		<DebugSymbols>false</DebugSymbols>
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <Compile Remove="Blazor\**" />
-	  <Compile Remove="Math\**" />
-	  <Compile Remove="Media\**" />
-	  <Compile Remove="Network\**" />
-	  <Compile Remove="Performance\**" />
-	  <Compile Remove="Security\**" />
-	  <EmbeddedResource Remove="Blazor\**" />
-	  <EmbeddedResource Remove="Math\**" />
-	  <EmbeddedResource Remove="Media\**" />
-	  <EmbeddedResource Remove="Network\**" />
-	  <EmbeddedResource Remove="Performance\**" />
-	  <EmbeddedResource Remove="Security\**" />
-	  <None Remove="Blazor\**" />
-	  <None Remove="Math\**" />
-	  <None Remove="Media\**" />
-	  <None Remove="Network\**" />
-	  <None Remove="Performance\**" />
-	  <None Remove="Security\**" />
+		<Compile Remove="Blazor\**" />
+		<Compile Remove="Math\**" />
+		<Compile Remove="Media\**" />
+		<Compile Remove="Network\**" />
+		<Compile Remove="Performance\**" />
+		<Compile Remove="Security\**" />
+		<EmbeddedResource Remove="Blazor\**" />
+		<EmbeddedResource Remove="Math\**" />
+		<EmbeddedResource Remove="Media\**" />
+		<EmbeddedResource Remove="Network\**" />
+		<EmbeddedResource Remove="Performance\**" />
+		<EmbeddedResource Remove="Security\**" />
+		<None Remove="Blazor\**" />
+		<None Remove="Math\**" />
+		<None Remove="Media\**" />
+		<None Remove="Network\**" />
+		<None Remove="Performance\**" />
+		<None Remove="Security\**" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -43,7 +44,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+		<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
 	</ItemGroup>
 
 </Project>
