--- a/Stryxus.Lib.AspNet/Stryxus.Lib.AspNet.csproj
+++ b/Stryxus.Lib.AspNet/Stryxus.Lib.AspNet.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net5</TargetFramework>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
     <LangVersion>9.0</LangVersion>
   </PropertyGroup>
