--- a/Stryxus.Lib.AspNet/Stryxus.Lib.AspNet.csproj
+++ b/Stryxus.Lib.AspNet/Stryxus.Lib.AspNet.csproj
@@ -2,13 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
+    <Platforms>AnyCPU</Platforms>
+    <AssemblyName>Stryxus.Lib.AspNet</AssemblyName>
+    <RootNamespace>Stryxus.Lib.AspNet</RootNamespace>
     <LangVersion>9.0</LangVersion>
   </PropertyGroup>
 
-  <ItemGroup>
-    <FrameworkReference Include="Microsoft.AspNetCore.App" />
-  </ItemGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>none</DebugType>
+    <DebugSymbols>false</DebugSymbols>
+  </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.1" />
@@ -18,7 +21,5 @@
   <ItemGroup>
     <ProjectReference Include="..\Stryxus.Lib\Stryxus.Lib.csproj" />
   </ItemGroup>
-  
-
 
 </Project>
