--- a/Stryxus.Lib/Stryxus.Lib.csproj
+++ b/Stryxus.Lib/Stryxus.Lib.csproj
@@ -2,15 +2,15 @@
 
 	<PropertyGroup>
 		<TargetFramework>net5.0</TargetFramework>
-		<Platforms>AnyCPU</Platforms>
+		<Platforms>x64</Platforms>
 		<AssemblyName>Stryxus.Lib</AssemblyName>
 		<RootNamespace>Stryxus.Lib</RootNamespace>
 		<LangVersion>9.0</LangVersion>
 	</PropertyGroup>
 
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-		<DebugType>none</DebugType>
-		<DebugSymbols>false</DebugSymbols>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+	  <DebugType>none</DebugType>
+	  <DebugSymbols>false</DebugSymbols>
 	</PropertyGroup>
 
 	<ItemGroup>
