Correct remaining errors and warnings

--- a/Stryxus.Lib.CPP/Stryxus.Lib.CPP.vcxproj
+++ b/Stryxus.Lib.CPP/Stryxus.Lib.CPP.vcxproj
@@ -10,6 +10,11 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Stryxus.Lib.C\Stryxus.Lib.C.vcxproj">
+      <Project>{df68092c-17af-4814-95d2-4b36f5271912}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
