--- a/Stryxus.Lib.C/Stryxus.Lib.C.vcxproj
+++ b/Stryxus.Lib.C/Stryxus.Lib.C.vcxproj
@@ -73,6 +73,7 @@
       <PrecompiledHeader>Create</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
+      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
