--- a/Stryxus.Lib.C/Stryxus.Lib.C.vcxproj.filters
+++ b/Stryxus.Lib.C/Stryxus.Lib.C.vcxproj.filters
@@ -44,4 +44,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="cpp.hint" />
+  </ItemGroup>
 </Project>
