--- a/Stryxus.Lib.Tests.C.Linux/Stryxus.Lib.Tests.C.Linux.vcxproj
+++ b/Stryxus.Lib.Tests.C.Linux/Stryxus.Lib.Tests.C.Linux.vcxproj
@@ -40,6 +40,11 @@
   <ItemGroup>
     <ClCompile Include="c_tests.c" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Stryxus.Lib.C.Linux\Stryxus.Lib.C.Linux.vcxproj">
+      <Project>{51abd250-fcb8-4973-bc8b-01f9ce2b0d25}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{77cb82a9-fb06-4ae8-a7a3-cb6e79035e65}</ProjectGuid>
     <Keyword>Linux</Keyword>
@@ -78,9 +83,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings" />
-  <ImportGroup Label="Shared">
-    <Import Project="..\Stryxus.Lib.C.Shared\Stryxus.Lib.C.Shared.vcxitems" Label="Shared" />
-  </ImportGroup>
+  <ImportGroup Label="Shared" />
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
