--- a/Stryxus.Lib.C.Shared/Stryxus.Lib.C.Shared.vcxitems.filters
+++ b/Stryxus.Lib.C.Shared/Stryxus.Lib.C.Shared.vcxitems.filters
@@ -9,6 +9,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="$(MSBuildThisFileDirectory)stdc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)sl_time.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)sl_io.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -21,14 +27,17 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)sl_string.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="$(MSBuildThisFileDirectory)sl_time.h">
+    <ClInclude Include="$(MSBuildThisFileDirectory)sl_collections.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="$(MSBuildThisFileDirectory)stdc.h">
+    <ClInclude Include="$(MSBuildThisFileDirectory)stryxuslib.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="$(MSBuildThisFileDirectory)stdc.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="$(MSBuildThisFileDirectory)sl_io.c">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -44,7 +53,10 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)sl_time.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="$(MSBuildThisFileDirectory)stdc.c">
+    <ClCompile Include="$(MSBuildThisFileDirectory)sl_collections.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)stryxuslib.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
