--- a/Stryxus.Lib.C.NT/Stryxus.Lib.C.NT.vcxproj
+++ b/Stryxus.Lib.C.NT/Stryxus.Lib.C.NT.vcxproj
@@ -115,8 +115,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>
-      </PreprocessorDefinitions>
+      <PreprocessorDefinitions>KERNEL_NT;</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)curl\include;$(SolutionDir)cJSON;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
@@ -148,19 +147,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Update="D:\Projects\Stryxus.Lib\Stryxus.Lib.C.Shared\sl_collections.c">
+      <FileType>CppCode</FileType>
+    </ClCompile>
+    <ClCompile Update="D:\Projects\Stryxus.Lib\Stryxus.Lib.C.Shared\sl_libraries.c">
+      <FileType>CppCode</FileType>
+    </ClCompile>
+    <ClCompile Update="D:\Projects\Stryxus.Lib\Stryxus.Lib.C.Shared\sl_linux_collections.c">
+      <FileType>CppCode</FileType>
+    </ClCompile>
     <ClCompile Update="D:\Projects\Stryxus.Lib\Stryxus.Lib.C.Shared\stdc.c">
       <FileType>CppCode</FileType>
     </ClCompile>
-    <ClCompile Include="sl_nt_collections.c" />
-    <ClCompile Include="sl_nt_libraries.c" />
-    <ClCompile Include="stdc_nt.c" />
-    <ClCompile Include="stryxuslib_nt.c" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="sl_nt_collections.h" />
-    <ClInclude Include="sl_nt_libraries.h" />
-    <ClInclude Include="stdc_nt.h" />
-    <ClInclude Include="stryxuslib_nt.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
