--- a/Stryxus.Lib.CPP.NT/Stryxus.Lib.CPP.NT.vcxproj
+++ b/Stryxus.Lib.CPP.NT/Stryxus.Lib.CPP.NT.vcxproj
@@ -115,8 +115,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>
-      </PreprocessorDefinitions>
+      <PreprocessorDefinitions>KERNEL_NT;</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
