--- a/Stryxus.Lib.Tests.CPP.Linux/Stryxus.Lib.Tests.CPP.Linux.vcxproj
+++ b/Stryxus.Lib.Tests.CPP.Linux/Stryxus.Lib.Tests.CPP.Linux.vcxproj
@@ -80,6 +80,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <AdditionalIncludeDirectories>$(SolutionDir)curl\include;$(SolutionDir)cJSON;%(AdditionalIncludeDirectories);$(MSBuildThisFileDirectory)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>KERNEL_LINUX;</PreprocessorDefinitions>
     </ClCompile>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
