--- a/Stryxus.Lib.Tests.C.NT/Stryxus.Lib.Tests.C.NT.vcxproj
+++ b/Stryxus.Lib.Tests.C.NT/Stryxus.Lib.Tests.C.NT.vcxproj
@@ -133,6 +133,9 @@
       <AdditionalLibraryDirectories>$(SolutionDir)curl\lib;$(SolutionDir)Build\Debug\cJSON\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>cjson.lib;libcurl.a;libcurl.dll.a;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PreBuildEvent>
+      <Command>xcopy /E /Y "$(SolutionDir)curl\bin" "$(OutDir)"</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
