Revert "Update solution"
This reverts commit ece22dd46e16a47bf5be37fe8b8a7e76bf85296b.

--- a/Stryxus.Lib.AspNet/Stryxus.Lib.AspNet.csproj
+++ b/Stryxus.Lib.AspNet/Stryxus.Lib.AspNet.csproj
@@ -18,8 +18,10 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.1" />
   </ItemGroup>
 
-  <Import Project="..\Stryxus.Lib.AspNet.Shared\Stryxus.Lib.AspNet.Shared.projitems" Label="Shared" />
+  <ItemGroup>
+    <ProjectReference Include="..\Stryxus.Lib\Stryxus.Lib.csproj" />
+  </ItemGroup>
 
-  <Import Project="..\StryxusLib.Shared\StryxusLib.Shared.projitems" Label="Shared" />
+  <Import Project="..\Stryxus.Lib.AspNet.Shared\Stryxus.Lib.AspNet.Shared.projitems" Label="Shared" />
 
 </Project>
