--- a/Stryxus.Lib.AspNet/Stryxus.Lib.AspNet.csproj
+++ b/Stryxus.Lib.AspNet/Stryxus.Lib.AspNet.csproj
@@ -2,13 +2,18 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <Platforms>x64</Platforms>
+    <Platforms>x64;AnyCPU</Platforms>
     <AssemblyName>Stryxus.Lib.AspNet</AssemblyName>
     <RootNamespace>Stryxus.Lib.AspNet</RootNamespace>
     <LangVersion>9.0</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <DebugType>none</DebugType>
+    <DebugSymbols>false</DebugSymbols>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DebugType>none</DebugType>
     <DebugSymbols>false</DebugSymbols>
   </PropertyGroup>
